<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chinese Calendar Widget</string>
    <string name="widget_name">中國農曆</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="alert_title_ignore_battery_optimization">Ignore battery optimizations</string>
    <string name="alert_msg_ignore_battery_optimization">Please consider adding Chinese Calendar Widget to the \"Don\'t optimize\" list, otherwise, the app may not function.</string>

    <string name="dont_show_this_again">Don\'t show this again</string>

    <string name="add_widget">Add widget</string>

    <string name="pref_t_font_type">Font</string>
    <string name="pref_i_ft_traditional">Traditional</string>
    <string name="pref_i_ft_simplified">Simplified</string>

    <string name="pref_t_display_hour">Display hour</string>

    <string name="pref_t_weekday_font_colour">Weekday font colour</string>

    <string name="pref_t_custom_sunday_font_colour">Custom Sunday font colour</string>
    <string name="pref_s_custom_sunday_font_colour">Differ with weekday</string>

    <string name="pref_t_sunday_font_colour">Sunday font colour</string>

    <string name="pref_t_background_colour">Background colour</string>
    <string name="pref_i_bc_transparent">Transparent</string>
    <string name="pref_i_bc_white">White</string>
    <string name="pref_i_bc_white_percent_90">White 90 opacity</string>
    <string name="pref_i_bc_white_percent_80">White 80 opacity</string>
    <string name="pref_i_bc_white_percent_70">White 70 opacity</string>
    <string name="pref_i_bc_white_percent_60">White 60 opacity</string>
    <string name="pref_i_bc_white_percent_50">White 50 opacity</string>
    <string name="pref_i_bc_white_percent_40">White 40 opacity</string>
    <string name="pref_i_bc_white_percent_30">White 30 opacity</string>
    <string name="pref_i_bc_white_percent_20">White 20 opacity</string>
    <string name="pref_i_bc_white_percent_10">White 10 opacity</string>
    <string name="pref_i_bc_black">Black</string>
    <string name="pref_i_bc_black_percent_90">Black 90 opacity</string>
    <string name="pref_i_bc_black_percent_80">Black 80 opacity</string>
    <string name="pref_i_bc_black_percent_70">Black 70 opacity</string>
    <string name="pref_i_bc_black_percent_60">Black 60 opacity</string>
    <string name="pref_i_bc_black_percent_50">Black 50 opacity</string>
    <string name="pref_i_bc_black_percent_40">Black 40 opacity</string>
    <string name="pref_i_bc_black_percent_30">Black 30 opacity</string>
    <string name="pref_i_bc_black_percent_20">Black 20 opacity</string>
    <string name="pref_i_bc_black_percent_10">Black 10 opacity</string>

    <string name="pref_t_app_to_open">App to open</string>
    <string name="pref_s_app_to_open">App to open on tap</string>

    <string name="pref_cat_t_about">About</string>
    <string name="about_t_version">Version: %s</string>
    <string name="about_s_copyright">Copyright 2017–2019 HairyRobot. All rights reserved.</string>
    <string name="about_t_license">License: Apache License 2.0</string>
    <string name="about_s_license">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="about_t_source_code">Source code</string>
    <string name="about_s_source_code">https://github.com/HairyRobot/ChineseCalendarWidget</string>
</resources>
